# Bag-of-Visual-Words

./: BagofWords.cpp  BagofWords.hpp  CMakeLists.txt  README.md  kmean.cpp  main.cpp
